# Changelog

MäCAN-Sever by Maximilian Goldschmidt


## [2018-07-10.1]
### Fixed
- Werden mehrere Bilder gleichzeitig herunter geladen werden auch alle korrekt angezeigt.
- Auch beim Hochladen werden die Lokbilder nun ohne Neuladen angezeigt.


## [2018-07-09.1]
### Added
- Loks können nun Lokbilder zugewiesen werden.
- Unter "Einstellungen > Lokbilder" können nun Lokbilder hoch/heruntergeladen sowie gelöscht werden.
- Einige Standardwerte (Adresse, Av, Bv, Vmax, Vmin) können nun programmiert werden, sofern der Decoder es unterstützt (bisher nur mfx/M4).

### Fixed
- Anzeigefehler bei der Anmeldung von mfx/M4-Loks.


## [2018-06-30.1]
### Fixed
- mfx/M4-Anmeldung erneut überarbeitet.
- Rechtschreibfehler behoben / Texte angepasst

### Changed
- lokomotive.cs2 wird nun in /www/config/ gespeichert


## [2018-06-28.3]
### Fixed
- mfx/M4-Anmeldung überarbeitet.


## [2018-06-28.2]
### Added
- Die Lokliste wird nun zusätzlich als "lokomotive.cs2" gespeichert, um sie Anwendungen, die diese benötigen, zur verfügung zu stellen
- Einträge in der Hilfe


## [2018-06-28.1]
### Added
- Grunlagen für eine integrierte Hilfe
- Einstellungen für CAN-Geräte werden für die Dauer einer Sitzung in der Geräteliste gespeichert
- Möglichkeit, den MFX-Neuanmeldezähler zu erhöhen, um verlorene Loks wieder zu finden

### Fixed
- In schmalen Fenstern kann jetzt horizontal mit dem Mausrad durch die Tabs gescrollt werden


## [2018-06-27.1]
### Fixes
- Anpassungen für den Onion Omega2+