@@ -9,5 +9,7 @@
 </head>
 <body>
     <a href="../index.html">Startseite der Hilfe</a>
+    <h1>Lokliste bearbeiten</h1>
+    Hier können Eintrage der Lokliste erstellt, gelöscht und bearbeitet werden.
 </body>
 </html>
